fix: mypy typing, new bg color for dark mode

--- a/frontend/src/styles.css
+++ b/frontend/src/styles.css
@@ -1,7 +1,7 @@
 :root {
     --primary: #e1aa2a;
     --bg-light: #f8f9fa;
-    --bg-dark: #151b20;
+    --bg-dark: #1d1d3c;
     --bg-table-head: #f8f8f8;
     --text-light: #333;
     --text-dark: #f9fafb;
